--- a/src/main/resources/templates/playerform.html
+++ b/src/main/resources/templates/playerform.html
@@ -9,28 +9,28 @@
 </head>
 <body>
 <h1>Add Player</h1>
-<div class="mydiv">
+<form th:action="@{/savePlayer}" th:object="${player}" method="post" class="mydiv">
 <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" placeholder="Name" aria-describedby="basic-addon1">
-</div>
-<div class="input-group mb-3">
-    <div class="input-group-prepend">
-    </div>
-    <input type="text" class="form-control" placeholder="Number" aria-describedby="basic-addon1">
+    <input th:field="*{name}" type="text" class="form-control" placeholder="Name" aria-describedby="basic-addon1"/>
 </div>
 <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" placeholder="Address" aria-describedby="basic-addon1">
+    <input th:field="*{number}" type="text" class="form-control" placeholder="Number" aria-describedby="basic-addon1"/>
 </div>
 <div class="input-group mb-3">
     <div class="input-group-prepend">
     </div>
-    <input type="text" class="form-control" placeholder="Phone"  aria-describedby="basic-addon1">
+    <input th:field="*{address}" type="text" class="form-control" placeholder="Address" aria-describedby="basic-addon1"/>
 </div>
-<button type="button" class="btn btn-primary">Done</button>
+<div class="input-group mb-3">
+    <div class="input-group-prepend">
+    </div>
+    <input th:field="*{phone}" type="text" class="form-control" placeholder="Phone"  aria-describedby="basic-addon1"/>
 </div>
+<button type="submit" class="btn btn-primary">Done</button>
+</form>
 </body>
 </html>
