--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <h1>Player System</h1>
+<a th:class="add" th:href="@{/player-form}" type="button" class="btn btn-primary">Add Player</a>
 <table class="table table-dark">
     <thead>
     <tr>
@@ -26,9 +27,11 @@
         <td th:text="${temp.number}"></td>
         <td th:text="${temp.address}"></td>
         <td th:text="${temp.phone}"></td>
-
     </tr>
+
     </tbody>
+
 </table>
+
 </body>
 </html>
